--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,13 @@ uvicorn>=0.34.3
 sqlalchemy>=2.0.41
 sqlalchemy-utils>=0.41.2
 nanoid
+gpustat
+PyJWT>=2.7.0
+pytz>=2023.3
+netspresso_trainer==1.4.0
+boto3==1.38.35
+requests_toolbelt
+pymysql
+aenum
+celery
+pika
